@@ -293,6 +293,7 @@ Version 1.11.0-svn:
      It also affected the lua field wesnoth.current.side
    * Added: Fail macros FAIL and FAIL_WITH_DEV_MESSAGE.
    * Added: Helper code to make it easier to write enumerate stream operators.
+   * Added: UNREACHABLE_CODE macro.
 
 Version 1.10.0:
  * Campaigns:
